@startuml
'https://plantuml.com/class-diagram

interface Executor
abstract class BaseExecutor
class BatchExecutor
class ReuseExecutor
class SimpleExecutor

Executor <|-- BaseExecutor
Executor <|-- CachingExecutor
BaseExecutor <|-- BatchExecutor
BaseExecutor <|-- ReuseExecutor
BaseExecutor <|-- SimpleExecutor



@enduml